# kr-derivatives

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.obsidian/: app.json
data/: krx_contract_specs.json  krx_holidays_2015_2035.csv
data/curated/: excluded_corp_codes.csv  manual_k_adjustments.csv
examples/: 01_cb_fair_value.py  02_issuance_dilution_screen.py  03_iv_from_option_price.py
reports/: README.md  first_run_lessons.md  fourth_run_lessons.md  fourth_run_prep.md  fourth_run_prep_extra.md  second_run_lessons.md  second_run_prep.md  third_run_lessons.md  third_run_prep.md
research/: research_stock_totqy.py
src/kr_derivatives/: __init__.py
src/kr_derivatives/calendar/: __init__.py  krx.py
src/kr_derivatives/contracts/: __init__.py  base.py  convertible_bond.py  warrant.py
src/kr_derivatives/data/: __init__.py  cache.py  reader.py
src/kr_derivatives/forensic/: __init__.py  repricing.py  signals.py
src/kr_derivatives/market/: __init__.py  rates.py  volatility.py
src/kr_derivatives/pricing/: __init__.py  black_scholes.py  greeks.py  implied_vol.py
src/kr_derivatives/surfaces/: __init__.py  interpolation.py  svi.py
src/kr_derivatives/utils/: __init__.py  constants.py  dates.py
tests/: conftest.py
tests/golden/: test_cb_prices.py
tests/golden/reference_data/: cb_golden.json
tests/unit/: test_black_scholes.py  test_calendar.py  test_examples_smoke.py  test_greeks.py  test_implied_vol.py  test_rates.py  test_repricing.py  test_signals.py  test_volatility.py  test_warrant.py
(+2 files in other folders)
