[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kr-derivatives"
version = "0.1.0"
description = "Korean derivatives pricing and forensic analytics (CB/BW, options, futures)"
authors = [
    { name = "Jisoo Yi", email = "pon00050@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "exchange-calendars>=4.13",
    "requests-cache>=1.2",
    "pydantic>=2.0",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
fast = ["py_vollib>=1.0.1"]
advanced = ["financepy>=0.370"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kr_derivatives"]

[tool.uv]
compile-bytecode = false

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
